# mynux

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  mynux.py  pyproject.toml
.github/workflows/: publish-package.yml  test-package.yml
mynux/: __init__.py  __main__.py  config.py  dots.py  run.py  system.py
mynux/cli/: add.py  info.py  install.py
mynux/storage/: __init__.py  mynux.py  plain.py  remote.py
mynux/utils/: __init__.py  action.py  cp.py  init.py  ln.py  ls.py  pkg.py
tests/: test_mynux.py
